tests/bonsai/error/identifier.bonsai
//! flags: -p core
func main() -> i32 {
    _x: i32 = 42;
    return 0;
}
