tests/bonsai/error/identifier.expect
---CODE---
1
---STDERR---
[internal] Error: src/Parser/Parser.cpp:59
tests/bonsai/error/identifier.bonsai:3:5: [parse error] identifier: _x cannot begin with `_`. This is reserved for compiler-generated variables.

    _x: i32 = 42;
    ^^
